--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Forms" version="1.3.5.6335" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Base" version="27.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="27.0.0.0" targetFramework="MonoAndroid60" />
+  <package id="Xamarin.GooglePlayServices.Gcm" version="27.0.0.0" targetFramework="MonoAndroid60" />
 </packages>
