--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.emergencyassistanceresponsesystem">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.emergencyassistanceresponsesystem">     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.emergencyassistanceresponsesystem.permission.C2D_MESSAGE" />
+    <permission android:name="com.emergencyassistanceresponsesystem.permission.C2D_MESSAGE" 
+                android:protectionLevel="signature" />
 	<uses-sdk android:minSdkVersion="15" />
 	<application android:label="ears"></application>
 </manifest>
