--- a/AndroidOnly/Android.EARS/app/build.gradle
+++ b/AndroidOnly/Android.EARS/app/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -25,4 +26,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.google.gms:google-services:2.0.0-alpha3'
+}
+configurations {
+    all*.exclude group: 'com.android.support', module: 'support-v4'
 }
