--- a/AndroidOnly/gcm/app/src/main/AndroidManifest.xml
+++ b/AndroidOnly/gcm/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACTION_MANAGE_NETWORK_USAGE"/>
     <!-- [END gcm_permission] -->
 
     <application
