--- a/AndroidOnly/gcm/app/build.gradle
+++ b/AndroidOnly/gcm/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
    // compile 'com.google.android.gms:play-services-gcm:7.8.0'
     compile 'com.android.support:appcompat-v7:23.0.0'
-
+    compile 'com.google.android.gms:play-services-location:8.4.0'
     // Testing dependencies
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
     androidTestCompile 'com.android.support.test:runner:0.2'
