--- a/AndroidOnly/gcm/app/build.gradle
+++ b/AndroidOnly/gcm/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.1'
     androidTestCompile 'com.android.support.test:runner:0.2'
     androidTestCompile 'com.android.support:support-annotations:23.0.0'
+    compile 'com.squareup.retrofit2:retrofit:2.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
