--- a/AndroidOnly/gcm/app/src/main/AndroidManifest.xml
+++ b/AndroidOnly/gcm/app/src/main/AndroidManifest.xml
@@ -16,11 +16,13 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
             android:name="gcm.play.android.samples.com.gcmquickstart.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
